crates/sith_python_parser/tests/snapshots/invalid_syntax@params_multiple_varargs.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/params_multiple_varargs.py
---
## AST

```
Module(
    ModModule {
        range: 0..136,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..28,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..23,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 8..9,
                                parameter: Parameter {
                                    range: 8..9,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 8..9,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: Some(
                            Parameter {
                                range: 14..19,
                                name: Identifier {
                                    id: Name("args"),
                                    range: 15..19,
                                },
                                annotation: None,
                            },
                        ),
                        kwonlyargs: [
                            ParameterWithDefault {
                                range: 21..22,
                                parameter: Parameter {
                                    range: 21..22,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 21..22,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 25..28,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 25..28,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 63..97,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 67..70,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 70..92,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 71..72,
                                parameter: Parameter {
                                    range: 71..72,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 71..72,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: Some(
                            Parameter {
                                range: 74..80,
                                name: Identifier {
                                    id: Name("args1"),
                                    range: 75..80,
                                },
                                annotation: None,
                            },
                        ),
                        kwonlyargs: [
                            ParameterWithDefault {
                                range: 90..91,
                                parameter: Parameter {
                                    range: 90..91,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 90..91,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 94..97,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 94..97,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 98..135,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 102..105,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 105..130,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 106..107,
                                parameter: Parameter {
                                    range: 106..107,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 106..107,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: Some(
                            Parameter {
                                range: 109..115,
                                name: Identifier {
                                    id: Name("args1"),
                                    range: 110..115,
                                },
                                annotation: None,
                            },
                        ),
                        kwonlyargs: [
                            ParameterWithDefault {
                                range: 117..118,
                                parameter: Parameter {
                                    range: 117..118,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 117..118,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 120..121,
                                parameter: Parameter {
                                    range: 120..121,
                                    name: Identifier {
                                        id: Name("c"),
                                        range: 120..121,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 132..135,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 132..135,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(a, *, *args, b): ...
  |               ^^^^^ Syntax Error: Only one '*' parameter allowed
2 | # def foo(a, *, b, c, *args): ...
3 | def foo(a, *args1, *args2, b): ...
  |


  |
1 | def foo(a, *, *args, b): ...
2 | # def foo(a, *, b, c, *args): ...
3 | def foo(a, *args1, *args2, b): ...
  |                    ^^^^^^ Syntax Error: Only one '*' parameter allowed
4 | def foo(a, *args1, b, c, *args2): ...
  |


  |
2 | # def foo(a, *, b, c, *args): ...
3 | def foo(a, *args1, *args2, b): ...
4 | def foo(a, *args1, b, c, *args2): ...
  |                          ^^^^^^ Syntax Error: Only one '*' parameter allowed
  |
